# obs-studio

./: CMakeCache.txt
.github/workflows/: c-cpp.yml
UI/: obs-app.cpp
plugins/enc-amf/: CMakeLists.txt
plugins/enc-amf/AMF/: README.md
plugins/enc-amf/Include/: plugin.h
plugins/enc-amf/Source/: amf-capabilities.cpp  amf-encoder-h264.cpp  amf-encoder-h265.cpp  amf-encoder.cpp  amf.cpp  api-d3d11.cpp  api-d3d9.cpp  plugin.cpp  utility.cpp
plugins/enc-amf/Source/detect-amf/: CMakeLists.txt  detect-amf-support.cpp
plugins/win-capture/: game-capture.c
plugins/win-capture/graphics-hook/: dxgi-capture.cpp
test/win/: test.cpp
